# parity-scale-codec

./: .gitlab-ci.yml  Cargo.toml  README.md
benches/: benches.rs
derive/: Cargo.toml
derive/src/: decode.rs  encode.rs  exact_size.rs  lib.rs  trait_bounds.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: main.rs
src/: bit_vec.rs  codec.rs  compact.rs  decode_all.rs  encode_append.rs  encode_like.rs  lib.rs
tests/: chain-error.rs  exact_size.rs  mod.rs  single_field_struct_encoding.rs  skip.rs  variant_number.rs
tetsy-scale-codec/: Cargo.toml
tetsy-scale-codec/derive/: Cargo.toml
tetsy-scale-codec/derive/src/: decode.rs  encode.rs
tetsy-scale-codec/src/: lib.rs
tetsy-scale-codec/tests/: mod.rs
