[package]
name = "tetsy-scale-codec-derive"
version = "1.2.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Serialization and deserialization derive macro for Tetsy SCALE Codec"
license = "Apache-2.0"
edition = "2018"
keywords = [ "tetcoin", "tetcore", "vapory" ]
categories = [ "cryptography::cryptocurrencies" ]
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-scale-codec"
documentation = "https://docs.rs/tetsy-scale-codec-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.8", features = [ "full", "visit" ] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
# tetsy-scale-codec = { path = "..", version = "1.1.0" }
tetsy-scale-codec = { path = ".." }
