[package]
name = "tetsy-codec-derive"
description = "Serialization and deserialization derive macro for Tetsy Codec"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[features]
default = ["std"]
std = []
